feat: alert service added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,3 +61,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # --- FIX ---
+  # This section declares the new assets folder so Flutter can find the sound file.
+  assets:
+    - assets/audio/
