--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # Code Gen - Unchanged
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
