--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   permission_handler: ^11.0.1
   shared_preferences: ^2.1.0
   collection: ^1.18.0
+  
+  # --- NEW: For Workout DSL Importer ---
+  crypto: ^3.0.3                 # For SHA1 hashing (exercise_hash).
 
   # Code Gen - Unchanged
   freezed_annotation: ^2.4.1
