--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # --- CORRECTED: Use the right package for communication ---
+  watch_connectivity: ^0.2.3
+
   # Firebase - Unchanged
   firebase_core: ^3.3.0
   firebase_auth: ^5.2.0
