--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.fairware.fairware_lift">
     <uses-permission android:name="android.permission.VIBRATE"/>
-
     <application
-        android:label="fairware_lift"
         android:name="${applicationName}"
+        android:label="fairware_lift"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -16,9 +15,8 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -28,23 +26,15 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-
-    <!--
-      This <queries> block is required for url_launcher to work on Android 11+
-      It declares the app's intention to interact with other apps that can handle
-      these intents (in this case, web browsers).
-    -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
-        <!-- For url_launcher: Allows opening https URLs -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="https" />
         </intent>
-        <!-- For url_launcher: Allows opening http URLs -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="http" />
