--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,3 @@
-// ----- android\settings.gradle -----
 pluginManagement {
     def flutterSdkPath = {
         def properties = new Properties()
@@ -17,14 +16,21 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    plugins {
+        id 'dev.flutter.flutter-plugin-loader' version '1.0.0'
+        id 'com.android.application' version '8.5.2'
+        id 'com.android.library' version '8.5.2'
+        id 'org.jetbrains.kotlin.android' version '2.0.21'
+    }
 }
 
 plugins {
-    id 'dev.flutter.flutter-plugin-loader' version '1.0.0'
-    id 'com.android.application' version '8.2.2' apply false // Using a version compatible with Groovy
+    id 'dev.flutter.flutter-plugin-loader'
+    id 'com.android.application' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
     id 'com.google.firebase.crashlytics' version '2.8.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false // Using a version compatible with AGP 8.2.2
+    id 'org.jetbrains.kotlin.android' apply false
 }
 
 include ':app', ':wear'
