--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   # --- CORRECTED: Use the right package AND version for communication ---
   watch_connectivity: ^0.2.3
+  # --- FIX: Added the missing Wear OS connectivity package ---
+  flutter_wear_os_connectivity: ^1.0.0
 
   # Firebase - Unchanged
   firebase_core: ^3.3.0
