watch and phone have the app, but not talking yet

--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- FIX: Added the package attribute to match the phone app -->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.fairware_lift">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
