Talking with phone and watch a bit maybe further

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,10 @@
+# --- FINAL FIX: Correctly escaped the backslashes in the JDK path. ---
+# This ensures Gradle uses the modern Java version bundled with Android Studio.
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+
+# Memory allocation for the Gradle daemon.
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+
+# Standard AndroidX flags required by Flutter.
 android.useAndroidX=true
 android.enableJetifier=true
